--- a/sgpa.html
+++ b/sgpa.html
@@ -86,6 +86,7 @@
            }
            #res{
             font-size: 200%;
+            width: 150px;
             background-color: rgb(217, 237, 198);
             color: red;
            }
