u: Minor Typo Fix

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </head>
 <center>
     <body id="bd">
-        <b id="h">2023 SGPA CALCULATOR</b>
+        <b id="h">MCA 2023 SGPA CALCULATOR</b>
         <br>
         <br>
         
